--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/schiavon-food?createDatabaseIfNotExist=true&timezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/schiavon_food?createDatabaseIfNotExist=true&timezone=UTC
 spring.datasource.username=root
 spring.datasource.password=superpato97
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 spring.datasource.hikari.maximum-pool-size=15
