--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
+spring.flyway.locations=classpath:db/migration,classpath:db/data
+
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=10000
