habilitanto erros de desserialização e os capturando.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 spring.flyway.locations=classpath:db/migration,classpath:db/data
 
+spring.jackson.deserialization.fail-on-ignored-properties=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=10000
