Tratando Exception NoHandlerFoundException.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.flyway.locations=classpath:db/migration,classpath:db/data
 spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=10000
