--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,6 +4,6 @@ spring.datasource.password=superpato97
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/migration,classpath:db/data-test
 
 spring.datasource.hikari.maximum-pool-size=1
