Implementando testes para Restaurante.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.flyway.locations=classpath:db/migration,classpath:db/data-test
 
 spring.datasource.hikari.maximum-pool-size=1
+
+spring.jpa.show-sql=false
