--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/schiavon_food?createDatabase
 spring.datasource.username=root
 spring.datasource.password=superpato97
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=false
