--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/schiavon_food?createDatabaseIfNotExist=true&timezone=UTC
 spring.datasource.username=root
-spring.datasource.password=superpato97
+spring.datasource.password=123456
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
