--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/schiavon_food?createDatabase
 spring.datasource.username=root
 spring.datasource.password=123456
 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 
 #spring.jpa.hibernate.ddl-auto=create
